<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?attr/appBackgroundColor">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MusicWidget"
        tools:context=".WidgetConfigActivity"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="?attr/appBackgroundColor">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/configure_widget_header_text"
            android:textColor="?attr/appTextColor"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/permission_grant_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/permission_header_text"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimaryVariant" />

        <TextView
            android:id="@+id/permission_explainer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_explainer_text"
            android:textColor="?attr/appTextColor"
            android:onClick="grantNotificationPermission" />
        <Button
            android:id="@+id/permission_grant_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_button_text"
            android:onClick="grantNotificationPermission">
        </Button>

        <TextView
            android:id="@+id/clear_name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/clear_name_header_text"
            android:textColor="?attr/colorPrimaryVariant"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/clear_name_explainer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_name_explainer_text"
            android:textColor="?attr/appTextColor"
            android:onClick="clearSong"/>

        <TextView
            android:id="@+id/default_app_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_app_header_text"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimaryVariant"
            android:paddingTop="20dp" />

        <TextView
            android:id="@+id/default_app_explainer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_app_explainer_text"
            android:textColor="?attr/appTextColor"
            android:onClick="chooseDefaultApp" />

        <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/large_widgets_header_text"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimaryVariant" /> -->


        <TextView
            android:id="@+id/customization_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="Customize"
            android:textColor="?attr/colorPrimaryVariant"
            android:paddingTop="20dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_settings_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_settings_icon_switch_text"
            android:textColor="?attr/appTextColor"/>

        <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/appearance_header_text"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimaryVariant" /> -->

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_rounded_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rounded_corners_switch_text"
            android:textColor="?attr/appTextColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_hide_empty_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hide_widget_switch_text"
            android:textColor="?attr/appTextColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_update_paused"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't update the widget with paused media"
            android:textColor="?attr/appTextColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_one_line_only"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Limit the song title to only one line"
            android:textColor="?attr/appTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/reduce_stuttering_header_text"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimaryVariant" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reduce_stuttering_explainer_text"
            android:textColor="?attr/appTextColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_reduce_stuttering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reduce_stuttering_switch_text"
            android:textColor="?attr/appTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/confirm_header_text"
            android:fontFamily="sans-serif-medium"
            android:textColor="?attr/colorPrimaryVariant" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_explainer_text"
            android:textColor="?attr/appTextColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button_text"
            android:onClick="confirmConfiguration"/>
    </LinearLayout>
</ScrollView>



